--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.28.3",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
