--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
+      "@/components/*": ["./app/components/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
