--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "hudy9x.com",
+  "name": "hudy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "push": "yarn build && git push",
     "lint": "next lint"
   },
   "dependencies": {
-    "@upstash/redis": "^1.28.3",
-    "contentlayer": "^0.3.4",
-    "date-fns": "^3.3.1",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.330.0",
-    "next": "14.1.0",
-    "next-contentlayer": "^0.3.4",
+    "lucide-react": "^0.414.0",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -24,11 +18,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
